--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,80 @@
 site_name: MkLorum
-nav:
-  - Home: index.md
-  - About: about.md
+# nav:
+#   - Home: index.md
+#   - About: about.md
 # theme: readthedocs
+theme:
+  name: material
+  features:
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.path
+    - navigation.indexes
+    - navigation.top
+    - navigation.sections
+    - search.suggest
+    - search.highlight
+    - content.code.copy
+    - content.action.edit
+
+plugins:
+  - search
+  # - blog
+
+copyright: Copyright &copy; 2025 作者名称
+
+
+markdown_extensions:
+
+  # Python Markdown
+  - abbr
+  - admonition
+  - attr_list
+  - def_list
+  - footnotes
+  - md_in_html
+  - toc:
+      permalink: true
+
+  # Python Markdown Extensions
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.highlight:
+      anchor_linenums: true               # 行号锚点
+      line_spans: __span                  # 行跨度
+      pygments_lang_class: true           # 语言类名
+      auto_title: true                    # 自动标题
+      linenums: true                      # 显示行号
+      linenums_style: pymdownx-inline     # 行号样式
+  - pymdownx.inlinehilite
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  # ✅ 语法高亮 + 代码增强
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid                   # Mermaid图表支持
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+        - name: vegalite                  # Vega-Lite图表支持
+          class: vegalite
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
+
+extra_javascript:
+  - js/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+
+# user_color_mode_toggle: true
+# color_mode: dark
